--- a/zadanie_3/merito_library/pyproject.toml
+++ b/zadanie_3/merito_library/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.0]
+requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -11,7 +11,7 @@ readme = "README.md"
 classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
-    "Development Status :: 3 - Alpha"
+    "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers, Students",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Utilities"
